--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <h1>Welcome to My Website!</h1>
     <hr>
-    <h2>Nguyễn Trần Như Nhộng</h2>
-    <p>Creative Director and Designer - Giám đốc sáng tạo và nhà thiết kế</p>
+    <h2>Dương Hùng Dũng</h2>
+    <p>Sinh viên ngành Kỹ thuật Phần mềm - Software Enginerring của Đại học FPT Hà Nội</p>
     <hr>
 
     <!-- Thêm hình ảnh tuhoc.cc.jpg và khi click chuột sẽ điều hướng đến contact.html  -->
